jmeter_grafana_reporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jmeter-reporter
  labels:
    jmeter_mode: reporter
spec:
  replicas: 1
  selector:
    matchLabels:
      jmeter_mode: reporter
  template:
    metadata:
      labels:
        jmeter_mode: reporter
    spec:
      containers:
      - name: jmreporter
        image: kubernautslabs/jmeter-reporter
        ports:
        - containerPort: 8686

---
apiVersion: v1
kind: Service
metadata:
  name: jmeter-reporter
  labels:
    jmeter_mode: reporter
spec:
  ports:
    - name: http
      port: 8686
      targetPort: 8686
  selector:
    jmeter_mode: reporter
  type: ClusterIP
