jmeter_grafana_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jmeter-grafana
  labels:
    app: jmeter-grafana
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: jmeter-grafana
  type: ClusterIP
